fix whitespace wrap in tooltip

--- a/assets/css/maptalks-ui.css
+++ b/assets/css/maptalks-ui.css
@@ -1,8 +1,10 @@
 .maptalks-tooltip {
+  display: block;
   background: #fff;
   border: 1px solid #b4b3b3;
   padding: 0px 4px 0px 4px;
   height:24px;
   line-height:24px;
   font-size:14px;
+  white-space: nowrap;
 }
